@@ -3,7 +3,8 @@ package hackathon.bigone.sunsak.recipe.comment.service;
 import hackathon.bigone.sunsak.accounts.user.entity.SiteUser;
 import hackathon.bigone.sunsak.recipe.board.entity.Board;
 import hackathon.bigone.sunsak.recipe.board.repository.BoardRepository;
-import hackathon.bigone.sunsak.recipe.comment.dto.CommentDto;
+import hackathon.bigone.sunsak.recipe.comment.dto.CommentRequestDto;
+import hackathon.bigone.sunsak.recipe.comment.dto.CommentResponseDto;
 import hackathon.bigone.sunsak.recipe.comment.entity.Comment;
 import hackathon.bigone.sunsak.recipe.comment.repository.CommentRepository;
 import jakarta.persistence.EntityNotFoundException;
@@ -12,40 +13,48 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class CommentService {
-
-    private final BoardRepository boardRepository;
     private final CommentRepository commentRepository;
+    private final BoardRepository boardRepository;
 
     @Transactional
-    public Comment addComment(Long boardPostId, String content, SiteUser author){
+    public CommentResponseDto addComment(Long boardPostId, CommentRequestDto requestDto, SiteUser author) {
         Board board = boardRepository.findById(boardPostId)
-                .orElseThrow(() -> new EntityNotFoundException("Board not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Board not found with id: " + boardPostId));
 
         Comment comment = new Comment();
+        comment.setContent(requestDto.getContent());
         comment.setBoard(board);
         comment.setAuthor(author);
-        comment.setContent(content);
 
-        return commentRepository.save(comment);
+        Comment savedComment = commentRepository.save(comment);
+
+        return convertToResponseDto(savedComment);
     }
 
     @Transactional(readOnly = true)
-    public List<CommentDto> getComments(Long boardPostId){
+    public List<CommentResponseDto> getComments(Long boardPostId) {
         Board board = boardRepository.findById(boardPostId)
-                .orElseThrow(() -> new EntityNotFoundException("Board not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Board not found with id: " + boardPostId));
 
-        return commentRepository.findByBoard(board).stream()
-                .map(c -> {
-                    CommentDto dto = new CommentDto();
-                    dto.setCommentId(c.getCommentId());
-                    dto.setBoardPostId(board.getPostId());
-                    dto.setAuthorId(c.getAuthor().getId());
-                    dto.setContent(c.getContent());
-                    return dto;
-                }).toList();
+        List<Comment> comments = commentRepository.findByBoard(board);
+
+        return comments.stream()
+                .map(this::convertToResponseDto)
+                .collect(Collectors.toList());
+    }
+
+    private CommentResponseDto convertToResponseDto(Comment comment) {
+        CommentResponseDto dto = new CommentResponseDto();
+        dto.setCommentId(comment.getId());
+        dto.setBoardPostId(comment.getBoard().getPostId());
+        dto.setAuthorId(comment.getAuthor().getId());
+        dto.setContent(comment.getContent());
+        dto.setCreatedAt(comment.getCreateDate());
+        return dto;
     }
 }
